--- a/views/application.ejs
+++ b/views/application.ejs
@@ -3,7 +3,7 @@
     <head>
     </head>
 
-    <body style="background-color: black;">
+    <body style="background-color: white;">
         <div id="chartContainer"></div>
         <script src="/js/lcjs.iife.js"></script>
         <script src="/js/chart.js"></script>
