--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
         div.a{
             font-size: 60px;
             text-align: center;
-            color : white;
+            color : black;
         }
         .hide { position:absolute; top:-1px; left:-1px; width:1px; height:1px; }
     /* CSS for textarea styling */
@@ -56,7 +56,7 @@
 </style>
     </style>
 </head>
-<body style="background-color: black;">
+<body style="background-color: white;">
     <div class="a">Arxiv Research Explorer</div>
     <iframe name="hiddenFrame" class="hide"></iframe>
     <br><br>
